modify contact.html page

--- a/contact.html
+++ b/contact.html
@@ -18,12 +18,9 @@
 				</ul>
 			</nav>
 		</header>
+<!-- end of header -->
 
-				<a href="tel:512-761-5487">Call me</a>
-				<a href="http://www.twitter.com/kimkaralekas">@KimKaralekas</a>
-				<a href="https://www.linkedin.com/in/kimkaralekas">My LinkedIn</a>
-				<a href="https://github.com/kimkaralekas">My GitHub</a>
-			<div class="clear"></div>
+		
 
 	</body>
 </html>
